# audio-processing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  test.yml
Python/: app.py  processing_audio.py  test.py  unit_testing.py
include/: audio_processing.h  binding.h
src/: audio_processing.cpp  binding.cpp
